# hwwctl

./: CLAUDE.md  Cargo.toml  README.md  justfile
.github/workflows/: build-bundles.yaml  deploy-docs.yaml  hwwctl.yaml  release-hwwctl.yaml
crates/bridge/: Cargo.toml
crates/bridge/src/: generic.rs  lib.rs  uhid.rs
crates/bridge/tests/: bb02_repro.rs  bitbox02_e2e.rs  bridge_integration.rs  coldcard_e2e.rs  e2e.rs  hidapi_probe.rs  signing_e2e.rs
crates/bundler/src/: download.rs  lib.rs  storage.rs
crates/control/: Cargo.toml
crates/control/src/: lib.rs
crates/emulators/src/: generic.rs  lib.rs  wallet_config.rs
crates/hwwcli/: Cargo.toml
crates/hwwcli/src/: client.rs  main.rs  output.rs
crates/hwwcli/src/daemon/: hidraw_scan.rs  instance.rs  mod.rs  registry.rs  spawn.rs
crates/hwwctl/: Cargo.toml
crates/hwwctl/src/: auto_spawn.rs  client.rs  main.rs
crates/hwwctl/src/daemon/: instance.rs  mod.rs  spawn.rs
crates/hwwtui/src/: main.rs
docs/: ARCHITECTURE.md  DEVELOPMENT.md  TODO.md  WALLETS.md  architecture.md  cli.md  development.md  index.md  quick-start.md  todo.md  wallets.md
udev/: 99-hwwctl.rules
website/: .gitignore  astro.config.mjs  package.json
website/public/: CNAME
website/src/: content.config.ts
