[workspace]
resolver = "2"
members = [
    "crates/bridge",
    "crates/emulators",
    "crates/protocol",
    "crates/bundler",
    "crates/control",
    "crates/hwwctl",
]
# Vendored firmware repos checked out by the bundle-build CI live
# alongside our workspace root and contain their own Cargo packages
# (e.g. bitbox02-firmware/tools/prost-build-proto). Without an
# explicit exclusion, cargo's parent-traversal lands on this manifest
# and refuses to compile those packages because they aren't members.
# Excluding the firmware trees keeps cargo away from them when
# building tools from inside the checkout.
exclude = [
    "bitbox02-firmware",
    "trezor-firmware",
    "coldcard-firmware",
    "specter-diy",
    "speculos",
    "jade",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.50", features = ["full"] }
async-trait = "0.1.89"

# UHID virtual device
uhid-virt = "0.0.8"

# PTY / Unix
nix = { version = "0.31.2", features = ["fs", "ioctl", "process", "signal", "term"] }
libc = "0.2"

# Logging / tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"

# Error handling
anyhow = "1.0.102"
thiserror = "2.0.18"

# Docker (future use for Jade/Ledger)
bollard = "0.20.2"

# HTTP client (used by bundler)
reqwest = { version = "0.12", features = ["stream", "json"] }

# Archive handling (used by bundler)
flate2 = "1"
tar = "0.4"

# Directory helpers (used by bundler)
dirs = "6"

# CLI parsing (used by hwwctl)
clap = { version = "4.5", features = ["derive", "env"] }
