[package]
name = "bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
protocol = { path = "../protocol" }
emulators = { path = "../emulators" }

# UHID is a Linux kernel interface (`/dev/uhid`). macOS / Windows
# don't have an equivalent. Gating the dep on Linux lets the crate
# compile on dev machines on those OSes; the concrete bridge impls
# (`generic`, `trezor`, `uhid` modules) are themselves gated below
# and replaced with stubs that return a "not supported on this
# platform" error. The `Bridge` trait + shared types stay cross-
# platform so the app layer can still reference them.
[target.'cfg(target_os = "linux")'.dependencies]
uhid-virt = { workspace = true }

[dev-dependencies]
hidapi = "2"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
bundler = { path = "../bundler" }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
bitbox-api = { version = "0.9.0", default-features = false, features = ["simulator", "usb", "multithreaded", "tokio"] }
coldcard = "0.12"
bitcoin = { version = "0.32", features = ["base64", "serde", "std"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
hex = "0.4"
