[package]
name = "control"
version = "0.1.0"
edition = "2021"
description = "IPC protocol types shared by the hwwctl client and daemon."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
